--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@kyvg/vue3-notification": "^2.3.4",
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
     "jshint": "^2.13.4",
